Issue #12: Add a UI for adding aliases for group IDs to arbitrator so users can add human-readable information to calendar events.
Also:
  - Add ability to retrieve a string for when the game starts to be placed into the notes of the calendar event.
  - Reorganize tests so that assertions are in the correct actual, expected form.

--- a/style/arbitrator.css
+++ b/style/arbitrator.css
@@ -24,6 +24,26 @@
     font-size: 8pt;
 }
 
+.aliasUI {
+  min-height: 2em;
+  margin-top: 1em;
+  margin-right: 0.5em;
+  vertical-align: middle;
+}
+
+.inputMessageArea {
+  display: hidden;
+}
+
+#prefArea {
+  display: none;
+  border: 1px solid #330099;
+  border-radius: 8px;
+  background-color: #99ccff;
+  padding: 1em 1em 1em 1em;
+  margin-top: 1em;
+}
+
 body {
   overflow-y: hidden;
 }
